@@ -1,5 +1,5 @@
 # -*- Makefile -*-
 
-SUBDIRS = src example geomSGIn32
+SUBDIRS = src doc example geomSGIn32
 
 AUTOMAKE_OPTIONS = 1.7
