@@ -1,0 +1,3 @@
+# -*- Makefile -*-
+
+EXTRA_DIST = anisotropicMetric.tex
